--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,16 +1,28 @@
 .logo_wrapper {
-  width: 111px;
-  height: 46px;
+  max-width: 111px;
+  max-height: 46px;
 }
 
 .logo {
   display: flex;
-  height: 46px;
+  max-height: 46px;
   align-items: center;
   justify-content: center;
   font-family: var(--font-open-sans), sans-serif;
   font-size: var(--font-size-xl);
   color: var(--secondary-color);
+}
+
+@media (max-width: 768px) {
+  .logo_wrapper {
+    max-width: 100px;
+    max-height: 28px;
+  }
+  .logo {
+    height: 25px;
+    max-width: 98px;
+    font-size: 18px;
+  }
 }
 
 /*# sourceMappingURL=Logo.module.css.map */
