--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,6 +1,11 @@
 .main{
-  max-height: 100%;
   overflow-y: auto;
   max-width: 1180px;
   margin: 15px auto 0;
+}
+
+@media(max-width: 768px){
+  .main{
+    max-width: 344px;
+  }
 }
