--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,14 +20,14 @@
   font-family: var(--font-manrope), serif;
   font-weight: 500;
   font-size: var(--font-size-l);
-  height: 52px;
+  max-height: 52px;
   padding-top: 12px;
   padding-bottom: 16px;
 }
 
 .contacts_wrapper {
-  width: 193px;
-  height: 24px;
+  max-width: 193px;
+  max-height: 24px;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -35,14 +35,14 @@
 
 .icons_wrapper {
   display: flex;
-  width: 56px;
-  height: 24px;
+  max-width: 56px;
+  max-height: 24px;
   gap: 8px;
 }
 
 .for_clients {
-  width: 193px;
-  height: 22px;
+  max-width: 193px;
+  max-height: 22px;
   display: flex;
   gap: 24px;
 }
@@ -56,15 +56,46 @@
   font-family: var(--font-manrope), serif;
   font-weight: 500;
   font-size: var(--font-size-l);
-  height: 46px;
+  max-height: 46px;
 }
 
 .catalog {
-  width: 95px;
-  height: 22px;
+  max-width: 95px;
+  max-height: 22px;
   display: flex;
   gap: 8px;
   align-items: center;
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 94px;
+    border-bottom: none;
+    padding: 0;
+  }
+  .mobile_upper_section {
+    width: 100%;
+    height: 44px;
+    border-bottom: 1px solid #D8E3EC;
+  }
+  .info_section {
+    max-width: 376px;
+    padding: 8px 16px 8px 16px;
+  }
+  .mobile_icons_wrapper {
+    display: flex;
+    height: 28px;
+    max-width: 232px;
+    gap: 28px;
+  }
+  .main_header_section {
+    max-width: 376px;
+    max-height: 44px;
+    margin: 0 auto;
+  }
 }
 
 /*# sourceMappingURL=Header.module.css.map */
