--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,15 +1,16 @@
 .search_container {
   display: flex;
   align-items: center;
-  width: 632px;
-  height: 46px;
+  max-width: 632px;
+  width: 100%;
+  max-height: 46px;
   border-radius: 8px;
   padding: 1.5px;
   background-color: var(--secondary-color);
 }
 
 .input {
-  width: 569px;
+  width: 100%;
   height: 43px;
   border: none;
   border-radius: 8px;
@@ -24,7 +25,7 @@
 .search_button {
   border: none;
   background: none;
-  width: 60px;
+  max-width: 60px;
   height: 20px;
   padding-right: 20px;
   padding-left: 20px;
@@ -32,6 +33,18 @@
 }
 .search_button:hover {
   opacity: 0.8;
+}
+
+@media (max-width: 768px) {
+  .search_container {
+    width: 345px;
+    max-height: 38px;
+  }
+  .input {
+    max-width: 290px;
+    max-height: 35px;
+    font-size: var(--font-size-m);
+  }
 }
 
 /*# sourceMappingURL=Search.module.css.map */
