--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -8,7 +8,13 @@
 .Modal.opened {
   opacity: 1;
   pointer-events: auto;
-  z-index: 100;
+  z-index: 10000;
+}
+.Modal.settings {
+  z-index: 10010;
+}
+.Modal.settings .overlay {
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .overlay {
@@ -19,7 +25,7 @@
 
 .content {
   position: absolute;
-  top: var(--header-height);
+  top: 0;
   right: 0;
   transform: translateX(100%);
   opacity: 0;
@@ -28,6 +34,25 @@
 .content.opened {
   transform: translateX(0);
   opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .overlay {
+    background: #FEFEFE;
+  }
+  .content {
+    top: 0;
+    left: 50%;
+    right: auto;
+    transform: translate(-50%);
+  }
+  .content.opened {
+    transform: translateX(-50%);
+  }
+  .content.settings {
+    top: auto;
+    bottom: 0;
+  }
 }
 
 /*# sourceMappingURL=Modal.module.css.map */
