--- a/src/components/Basket/BasketProductCard.module.scss
+++ b/src/components/Basket/BasketProductCard.module.scss
@@ -49,6 +49,9 @@
   font-size: var(--font-size-l);
   width: 100%;
   word-break: break-word;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .article_wrapper{
