--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -44,6 +44,9 @@
   width: 100%;
   color: var(--primary-color);
   @include font-style-16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .cost_container {
