--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,3 +9,15 @@
     opacity: 0.6;
   }
 }
+
+@media(max-width: 768px){
+  .button{
+    &:hover{
+      opacity: 1;
+    }
+
+    &:active{
+      opacity: 0.6;
+    }
+  }
+}
