--- a/src/components/CustomLink/CustomLink.module.css
+++ b/src/components/CustomLink/CustomLink.module.css
@@ -7,4 +7,10 @@
   opacity: 0.7;
 }
 
+@media (max-width: 768px) {
+  .link:hover {
+    opacity: 1;
+  }
+}
+
 /*# sourceMappingURL=CustomLink.module.css.map */
